styles/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
}

i {
    vertical-align: middle;
}

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-family: sans-serif;
    color: white;
}
body {
    background-color: #222222;
}

.header {
    text-align: center;
    color: white;
    background: rgba(0, 0, 0, 0.5);
    padding: 20px;
    width: 100%;
}
.score {
    float: left;
}
.questioncount {
    float: right;
}
.score,
.questioncount {
    margin: 15px;
}
h1 {
    font-weight: 100;
}

.wrapper {
    background-image: url("../images/Glacier_National_Park_sunset.jpg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    height: 512px;
}

h2 {
    font-size: 2em;
}
.finalscore {
    font-size: 1em;
}

.overlaycorrect,
.overlayincorrect,
.overlayscore {
    background-image: linear-gradient(to right, rgba(0,0,0,0.2), rgba(0,0,0,0.75), rgba(0,0,0,0.2));
    display: none;
    height: 13em;
    z-index: 1;
    text-align: center;
    line-height: 2em;
}

.statsboxinfo {
    background: rgba(0, 0, 0, 0.5);
}
.progress_wrap {
    position: relative;
    width: 100%;
    height: 5px;
    background-color: #1d2f15;
}
.progress_bar {
    position: absolute;
    width: 0%;
    height: 100%;
    background-color: #35421e;
}
.smallfooter {
    height: 2%;
    background: rgba(0, 0, 0, 0.5);
}
.statsboxinfo {
    display: none;  /** toggle on in jQuery **/
}
.statsboxinfo,
.smallfooter {
    text-align: center;
}
.choices {
    text-align: center;
}

button {
    height: 65px;
    width: 200px;
    display: none;
    background: #253950;
    border-radius: 2px;
    margin: 15px;
    border: 1px solid black;
    font-size: x-large;
}
button:hover{
    border: 1px solid #35421e;
    cursor: pointer;
}
.question {
    padding: 15px;
}
.smallfooter > li {
    display: inline-block;
    margin: 0 50px;
    text-align: center;

}
.smallfooter {
    border-top: 1px solid #35421e;
    border-bottom: 1px solid #35421e;
}

@media screen and (max-width: 1280px){
    .statsboxinfo {
        font-size: x-large;
    }
    .wrapper {
        height: 320px;
    }
}
@media screen and (max-width: 720px) {
     button {
         width: 50%;
         height: 64px;
     }
     .wrapper {
         height: 360px;
     }
}
@media screen and (max-width: 500px) {
    .wrapper {
        height: 256px;
    }
    button {
        width: 40%;
    }
}

